<?xml version="1.0"?>
<package>
  <name>bringup</name>
  <version>1.0.10</version>
  <description>Package contains bringup scripts for drone</description>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>