<?xml version="1.0"?>
<package format="2">
  <name>monocular</name>
  <version>1.0.0</version>
  <description>
    monocular node for capstone
  </description>
  <license>Apache 2.0</license>
  <author email="test@whoknows.com">whoknows</author>
  <maintainer email="test@whoknows.com">whoknows</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
