<?xml version="1.0"?>
<package format="2">
  <name>navigation</name>
  <version>0.0.1</version>
  <description>navigation package</description>
  <maintainer email="daniel.asadi91@gmail.com">Daniel Asadi</maintainer>
  <license>TODO</license>
  <author>daniel.asadi91@gmail.com</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>utfr_common</build_depend>
  <build_depend>utfr_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>utfr_common</exec_depend>
  <exec_depend>utfr_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
