<?xml version="1.0"?>
<package format="3">
  <name>utfr_msgs</name>
  <version>0.0.1</version>
  <description>utfr custom messages</description>
  <maintainer email="kelvinwhcui@gmail.com">kelvin cui</maintainer>
  <license>TODO</license>
  <author>kelvinwhcui@gmail.com</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
