<?xml version="1.0"?>
<package format="2">
  <name>utfr_sim_bridge</name>
  <version>0.0.1</version>
  <description>utfr_sim_bridge ros2 package</description>
  <maintainer email="youssefelhaddad2011@gmail.com">Youssef Elhadad</maintainer>
  <license>TODO</license>
  <author>youssefelhaddad2011@gmail.com</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>utfr_common</build_depend>
  <build_depend>utfr_msgs</build_depend>
  <build_depend>eufs_msgs</build_depend>
  <build_depend>ackermann_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>utfr_common</exec_depend>
  <exec_depend>utfr_msgs</exec_depend>
  <exec_depend>eufs_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>